fix: prevent DocSearch SVG clipping in WebKit (#5240)

--- a/src/client/theme-default/styles/docsearch.css
+++ b/src/client/theme-default/styles/docsearch.css
@@ -41,6 +41,10 @@
   --docsearch-modal-shadow: none;
 }
 
+:is(.DocSearch-Container, .DocSearch-Sidepanel) svg {
+  overflow: visible;
+}
+
 .DocSearch-AskAiScreen-RelatedSources-Item-Link {
   padding: 8px 12px 8px 10px;
 }
